--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
+    "dotenv": "^16.4.5",
     "express": "^5.0.0"
   },
   "devDependencies": {
