--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -11,8 +13,9 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^5.0.0"
+    "express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
