--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^5.0.1"
+    "express": "^5.0.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
