--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.1",
+    "express-session": "^1.18.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
