--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^5.0.1",
     "express-session": "^1.18.1",
+    "supabase": "^1.219.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
