--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.1",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "supabase": "^1.219.2",
     "uuid": "^10.0.0"
   },
